# Signal

./: README.md
FilterApp/: .gitignore  CMakeLists.txt
FilterApp/src/: DataPoint.h  FIRWorker.cpp  FIRWorker.h  IIRWorker.cpp  IIRWorker.h  fft.cpp  fft.h  main.cpp  mainwindow.cpp  mainwindow.h
FilterApp/src/filters/: exponential_filter.cpp  exponential_filter.h  filter_base.h  moving_average_filter.cpp  moving_average_filter.h
Практическое/: Фильтрация.docx
